--- a/app/assets/stylesheets/theme.css.scss
+++ b/app/assets/stylesheets/theme.css.scss
@@ -5,7 +5,7 @@ $highlight-bg: #1FA1BF;
 $color: #144651;
 $highlight-color: #ffffff;
 
-$font-stack: Helvetica, sans-serif;
+$font-stack: Gudea, Helvetica, Verdana, sans-serif;
 
 body {
   font: 100% $font-stack;
